--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
   flutter_datetime_picker: ^1.4.0
+  flutter_advanced_drawer: ^1.3.2
+  fluentui_system_icons: ^1.1.185
 
 dev_dependencies:
   flutter_test:
