--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_datetime_picker: ^1.4.0
   flutter_advanced_drawer: ^1.3.2
   fluentui_system_icons: ^1.1.185
+  rflutter_alert: ^2.0.4
 
 dev_dependencies:
   flutter_test:
