--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   rflutter_alert: ^2.0.4
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
+  async: ^2.9.0
+  vector_math: ^2.1.2
 
 dev_dependencies:
   flutter_test:
